# OpenOA

./: .gitignore  .npmrc  PROJECT.md  README.md  harmony-codegen.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: config.json
.claude/: settings.json
ai read/: AI.readme.md
apps/oa/: Gemfile  README.md  app.json  index.js  metro.config.harmony.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
apps/oa/android/: build.gradle  settings.gradle
apps/oa/android/app/: build.gradle  proguard-rules.pro
apps/oa/android/app/src/main/: AndroidManifest.xml
apps/oa/android/app/src/main/java/com/itc/oa/: MainActivity.kt  MainApplication.kt
apps/oa/android/app/src/main/java/com/opendingding/: MainActivity.kt  MainApplication.kt
apps/oa/android/app/src/main/res/values/: strings.xml
apps/oa/harmony/: build-profile.json5  oh-package-lock.json5  oh-package.json5
apps/oa/harmony/AppScope/: app.json5
apps/oa/harmony/AppScope/resources/base/element/: string.json
apps/oa/harmony/entry/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
apps/oa/harmony/entry/src/main/: module.json5  module.json5.backup
apps/oa/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
apps/oa/harmony/entry/src/main/ets/: RNPackagesFactory.ets
apps/oa/harmony/entry/src/main/ets/biometric/: BiometricPackage.ets  BiometricTurboModule.ets
apps/oa/harmony/entry/src/main/ets/entryability/: EntryAbility.ets
apps/oa/harmony/entry/src/main/ets/pages/: Index.ets
apps/oa/harmony/entry/src/main/ets/storage/: StorageTurboModule.ets
apps/oa/harmony/entry/src/main/resources/base/element/: string.json
apps/oa/ios/: Podfile
apps/oa/ios/OpenDingDing/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
apps/oa/ios/OpenDingDing.xcodeproj/: project.pbxproj
apps/oa/ios/OpenDingDing.xcodeproj/xcshareddata/xcschemes/: OpenDingDing.xcscheme
apps/oa/ios/OpenDingDing.xcworkspace/: contents.xcworkspacedata
apps/oa/ios/OpenOA/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  OpenOA-Bridging-Header.h
apps/oa/ios/OpenOA.xcodeproj/: project.pbxproj
apps/oa/ios/OpenOA.xcodeproj/xcshareddata/xcschemes/: OpenOA.xcscheme
apps/oa/ios/OpenOA.xcworkspace/: contents.xcworkspacedata
apps/oa/scripts/: codepush-release.js  harmony-rport.mjs  start-harmony.sh
apps/oa/src/: App.tsx
apps/oa/src/db/: opsqlite.harmony.ts  opsqlite.ts  smoke.ts
apps/oa/src/locales/: en-US.json  zh-CN.json
apps/oa/src/screens/: BiometricDemoScreen.tsx  DemoScreen.tsx  MainScreen.tsx
apps/oa/src/screens/demo/: AuthTab.tsx  CapsTab.tsx  DbTab.tsx  DocumentPickerTab.tsx  FlashListTab.tsx  FsTab.tsx  HotfixTab.tsx  I18nTab.tsx  ImTab.tsx  KeyTab.tsx  PermissionTab.tsx  PopupMenuTab.tsx  PushTab.tsx  SkiaTab.tsx  StorageTab.tsx  UikitTab.tsx  shared.tsx
apps/oa/src/screens/demo/imDemo/: ImDemoMain.tsx  index.ts  shared.tsx
apps/oa/src/screens/demo/imDemo/screens/: ImChatScreen.tsx  ImConversationScreen.tsx  ImFriendScreen.tsx  ImGroupScreen.tsx  ImMessageScreen.tsx  ImUserScreen.tsx
apps/oa/src/screens/opemim-plus-demo/: index.tsx
apps/oa/src/screens/opemim-plus-demo/components/: index.ts
apps/oa/src/screens/opemim-plus-demo/components/ChatInput/: index.tsx
apps/oa/src/screens/opemim-plus-demo/components/ConversationItem/: index.tsx
apps/oa/src/screens/opemim-plus-demo/components/MessageBubble/: index.tsx
apps/oa/src/screens/opemim-plus-demo/components/UserAvatar/: index.tsx
apps/oa/src/screens/opemim-plus-demo/config/: index.ts
apps/oa/src/screens/opemim-plus-demo/hooks/: index.ts  useBiometric.ts  useChat.ts  useConversationList.ts  useIM.ts
apps/oa/src/screens/opemim-plus-demo/screens/: index.ts
apps/oa/src/screens/opemim-plus-demo/screens/ChatScreen/: index.tsx
apps/oa/src/screens/opemim-plus-demo/screens/ConversationListScreen/: index.tsx
apps/oa/src/screens/opemim-plus-demo/screens/LoginScreen/: index.tsx
apps/oa/src/screens/opemim-plus-demo/screens/PersonalInfoScreen/: index.tsx
apps/oa/src/screens/opemim-plus-demo/screens/SettingsScreen/: index.tsx
apps/oa/src/screens/opemim-plus-demo/services/: authService.ts  biometricService.ts  imService.ts  index.ts  storageAdapter.ts
apps/oa/src/screens/opemim-plus-demo/stores/: authStore.ts  chatStore.ts  index.ts  settingsStore.ts
apps/oa/src/screens/opemim-plus-demo/types/: index.ts
apps/oa/src/stubs/: ReactDevToolsSettingsManager.js
apps/oa/src/utils/: base64.ts  usePush.ts
docs/: ADDING_A_MODULE.md  CHEATSHEET.md  ENVIRONMENT.md  HARMONY.md  RUN_ANDROID.md  RUN_HARMONY.md  RUN_IOS.md  SCRATCH_ANDROID.md  SCRATCH_HARMONY.md  SCRATCH_IOS.md  TROUBLESHOOTING.md  从零搭建-Android.md  从零搭建-iOS.md  从零搭建-鸿蒙.md  模块开发指南.md  热修复服务端部署.md  环境与磁盘布局.md  脚本速查.md  踩坑速查.md  运行-Android.md  运行-iOS.md  运行-鸿蒙.md  速查手册.md  鸿蒙接入要点.md
patches/: react-native-code-push@8.3.1.patch  react-native-safe-area-context@5.8.0.patch
scripts/: clean-node-modules.js  deref-rn-gradle-plugin.js  deref-rn-gradle-plugin.sh  harmony-codegen.js  harmony-postinstall.js
specs/app/: SPEC.md  opemim-plus-demo-spec.md
specs/base/: SPEC.md
specs/biometric/: SPEC.md
specs/db/: SPEC.md
specs/flash-list/: SPEC.md
specs/hotfix/: SPEC.md
specs/im/: SPEC.md
specs/permission/: SPEC.md
specs/push/: SPEC.md
specs/skia/: SPEC.md
specs/storage/: SPEC.md
specs/uikit/: SPEC.md
